fix: горизонтальный scrollbar готов, (вертикальный вроде тоже)

--- a/task5/src/modules/KanbanPage/kanban-page.module.css
+++ b/task5/src/modules/KanbanPage/kanban-page.module.css
@@ -1,3 +1,20 @@
+.base {
+   display: flex;
+   flex-direction: column;
+   height: calc(100vh - 4rem);
+
+   &>*:nth-last-child(-n+2) {
+      position: relative;
+      width: 100%;
+      flex-basis: 100%;
+      flex-grow: 1;
+   }
+
+   &>*:last-child{
+      display: none;
+   }
+}
+
 .title {
    display: flex;
    align-items: center;
@@ -78,10 +95,10 @@
 
 .kanban_container {
    overflow: auto;
-   
+
    overflow: -moz-scrollbars-none;
    scrollbar-width: none;
-   
+
    width: 100%;
    width: max-content;
 
@@ -120,7 +137,8 @@
 
 
 
-   &>div, &>.col {
+   &>div,
+   &>.col {
 
       flex: 1 1 0px;
       min-width: 245px;
